2013-08-27  Murray Stokely  <murray@FreeBSD.org>

	* src/mutators.cpp (rprotobuf): Add support for setting int64
	  fields as R character vectors that are converted to int64 or
	  uint64 C++ types with std::stringstream.  This allows the user
	  to get around the lack of 64-bit integer support in R when working
	  interactively with RProtoBufs where a large precision number or
	  identifier needs to be stored.
	* inst/unitTests/runit.int64.R: Add tests for the above.

2013-08-21  Murray Stokely  <murray@FreeBSD.org>

	* inst/unitTests/runit.addressbook.R (test.ascii): Add more tests.
	* src/wrapper_Descriptor.cpp (rprotobuf): Add better error
	  handling for readASCII of text strings rather than returning
	  an empty proto.
	* R/extensions.R: Add checks to ensure that a valid extension
	  FieldDescriptor is passed to getExtension and setExtension.
	* inst/unitTests/runit.int64.R (test.int64): Add a test
	  illustrating how RProtoBuf is broken in handling 64-bit integers
	  (commented out for now).
	* man/P.Rd: Document behavior for extensions.
	* inst/unitTests/runit.extensions.R (test.extension): Add more tests.
	* src/wrapper_Message.cpp (rprotobuf): Add function for returning
	  the number of extensions set in this message, to improve show() output.
	* src/rprotobuf.cpp (rprotobuf): Add support for looking up
	  extensions by name and returning FieldDescriptors.
	* R/00classes.R (P): Add support for returning extension
	  descriptors.

2013-07-14  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.extensions.R (test.extension): Comment-out
	test for setExtension against enum, at least for now

	* vignettes/RProtoBuf/RProtoBuf.Rnw: Added Murray to Authors, at last
	* vignettes/RProtoBuf-unitTests.Rnw: Idem
	* vignettes/RProtoBuf-quickref/RProtoBuf-quickref.Rnw: Idem

2013-07-13  Murray Stokely  <murray@FreeBSD.org>

	* inst/NEWS.Rd: Summarize new features since the last CRAN release
          last year.
	* DESCRIPTION: Increment version to 0.3.
